appId: com.cyjoon.dailyfunding-mobile
---
- extendedWaitUntil:
    visible:
      text: Enter URL manually
    timeout: 15000
- openLink: "dailyfunding://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081"
- runFlow:
    when:
      visible:
        text: 열기
    commands:
      - tapOn:
          text: 열기
- extendedWaitUntil:
    visible:
      text: Continue|로그인|마이|투자하기|간편비밀번호
    timeout: 90000
- runFlow:
    when:
      visible:
        text: Continue
    commands:
      - tapOn:
          text: Continue
- runFlow:
    when:
      visible:
        text: Enter URL manually
    commands:
      - tapOn:
          text: Enter URL manually
      - inputText: localhost:8081
      - tapOn:
          text: Connect
          optional: true
      - extendedWaitUntil:
          visible:
            text: Continue|로그인|마이|투자하기|간편비밀번호
          timeout: 90000
      - runFlow:
          when:
            visible:
              text: Continue
          commands:
            - tapOn:
                text: Continue
- runFlow:
    when:
      visible:
        text: Toggle performance monitor
    commands:
      - tapOn:
          point: 90%,61%
- runFlow:
    when:
      visible:
        text: Toggle performance monitor
    commands:
      - tapOn:
          point: 90%,61%
- runFlow:
    when:
      visible:
        text: Enter URL manually
    commands:
      - openLink: "dailyfunding://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081"
      - extendedWaitUntil:
          visible:
            text: Continue|로그인|마이|투자하기|간편비밀번호
          timeout: 90000
      - runFlow:
          when:
            visible:
              text: Continue
          commands:
            - tapOn:
                text: Continue
- extendedWaitUntil:
    visible:
      text: 로그인|마이|투자하기|간편비밀번호
    timeout: 90000
